stroop-macros/tests/compile_fails/invalid_unary.stderr
error: expected offset as isize
 --> tests/compile_fails/invalid_unary.rs:4:14
  |
4 |     pattern!(+0);
  |              ^
